updated intuition and considerations

--- a/Ghost_ads.ipynb
+++ b/Ghost_ads.ipynb
@@ -354,11 +354,13 @@
     "### intuition behind why this is the case\n",
     "Why doesn't give the ghost ad method give a much higher power? One would expect that, because the variance of your estimators is going down, because of the reduced noise from observations that did in fact not get the treated and wouldn't have had the treatment. My intiution behind why this is the case is the following:\n",
     "\n",
-    "The standard of the estimator in the unpaired unequal variances t-test is the following:\n",
+    "The estimator in the unpaired unequal variances t-test is the following:\n",
     "\n",
-    "$\\sqrt{\\sigma^2_{test}/n_{test} + \\sigma^2_{control}/n_{control}}$\n",
+    "$\\dfrac{p_{test}-p_{control}}{\\sqrt{\\dfrac{\\sigma^2_{test}}{n_{test}} + \\dfrac{\\sigma^2_{control}}{n_{control}}}}$\n",
     "\n",
-    "Now my intuition is that while $\\sigma_{test}$ and $\\sigma_{control}$ are getting bigger because of the noise that's introduced by including the untreated and would not be treated people, this is largely canceled out by the fact that $n_{test}$ and $n_{control}$ have also grown."
+    "Now my intuition is that the increased power is fully because of the decrease in the numerator: because there is 'noise' introduced because there is a population with zero effect, $p_{test}-p_{control}$ is getting smaller. However, the denominator is also getting smaller because of the fact that $n_{test}$ and $n_{control}$ have grown.\n",
+    "\n",
+    "Additionally, $\\sigma^2_{test}$ and $\\sigma^2_{control}$ are also smaller, at least in our example. This is the case because $p_{test}$ and $p_{control}$ are getting smaller (because the not-interesed people that are included in intend-to-treat have a lower probability of purchase) and for the Bernoulli distribution $\\sigma^2 = p(1-p)$."
    ]
   },
   {
@@ -367,6 +369,7 @@
    "source": [
     "### considerations\n",
     "* Of course I'm over-simplyfing the simulation. In fact there might be a wide range of purchase probabilities and effects which could somehow make ghost ads more beneficial than intend-to-treat. However, I do think statistics should be quite robust in calculating average effects if the true underlying effect is varying. This would be interesting to dive into.\n",
+    "* I'm assuming the targeting algorithm does a prettry good job in finding interested people. In reality, this might not be the case especially because part of the population might not be reachable by the targeting algorithm in the first place. So in reality, the 'would be treated' group might hold much more people that are interested in your product. This might make the ghost ad method more power relative to intend-to-treat.\n",
     "* It might be that my assumptions in how to calculate the power and p-values is oversimplified, or that I'm making some assumptions I can't make. However, I do think these calculations are the calculations that are generally used.\n",
     "* In the case of a non-binary outcome (like revenue) things might also be different."
    ]
